Show post's comment and add more comment for the post

--- a/angular.json
+++ b/angular.json
@@ -122,8 +122,12 @@
               "devServerTarget": "miptest:serve:production"
             }
           }
+        },
+        "options": {
+          "proxyConfig": "src/proxy.conf.json"
         }
       }
-    }},
+    }
+  },
   "defaultProject": "miptest"
 }
