--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start:sv": "json-server --watch src/assets/data.json",
-    "start:ng": "ng serve --open",
+    "start:ng": "ng serve --disable-host-check --proxy-config proxy.conf.json",
     "start": "yarn start:sv & yarn start:ng",
     "build": "ng build",
     "test": "ng test",
